--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "mongoose": "^4.11.5",
     "morgan": "^1.8.2",
     "uuid": "^3.1.0"
-  }
+  },
+"keywords": [
+    "node",
+    "hyperdev",
+    "express"
+  ],
+  "license": "MIT"
 }
